fix: disable controls on mobile contentcarousel

--- a/packages/ui/src/components/Carousel/Content/ContentCarousel.module.scss
+++ b/packages/ui/src/components/Carousel/Content/ContentCarousel.module.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/utilities/_variables';
+
 .expand {
   width: 100%;
   height: 100%;
@@ -28,6 +30,10 @@
   position: absolute;
   left: var(--space-3xl);
   bottom: var(--space-3xl);
+
+  @include for-mobile-only {
+    display: none;
+  }
 }
 
 .imageWrap {
